# text-rs

./: AGENTS-RUST.md  AGENTS.md  README.md  package.json
.github/workflows/: ci.yml
scripts/: gen-icons.cjs  post-build-macos.sh
src/: app.css
src-tauri/: Cargo.toml  Info.plist  custom-info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  macos_events.rs
src-tauri/src/commands/: file.rs  recovery.rs
src-tauri/src/state/: mod.rs  recent.rs
src/lib/codemirror/: extensions.ts  setup.ts  theme.ts
src/lib/components/: ConfirmDialog.svelte  Editor.svelte  FindReplace.svelte  StatusBar.svelte  Tab.svelte  TabBar.svelte  TitleBar.svelte
src/lib/editor/: actions.ts
src/lib/stores/: recent.svelte.ts  settings.svelte.ts  tabs.svelte.ts
src/lib/tauri/: ipc.ts
src/lib/types/: ipc.ts
src/lib/utils/: detect-lang.ts  ensure-ext.ts  error.ts  format-path.ts  idle.test.ts  idle.ts
src/routes/: +page.svelte
