[package]
name = "text-rs"
version = "0.2.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-dialog = "2.7"
tauri-plugin-fs = "2.5"
tauri-plugin-shell = "2.3"
tauri-plugin-store = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
encoding_rs = "0.8"
chardet = { version = "0.2", default-features = false }
notify = { version = "7", features = ["macos_kqueue"] }
log = "0.4"
simplelog = "0.12"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
